modules/vpc/vpc.tf
resource "aws_vpc" "practice_vpc" {
    cidr_block = "10.0.0.0/16"
    tags = {
        Name = "practice_vpc"
    }
}
